@@ -49,6 +49,7 @@ Lua:
  - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen, gl.MultiTexCoord
  - remove gl.CreateList, gl.CallList, gl.DeleteList
  - remove gl.DrawListAtUnit
+ - remove gl.Shape
  - remove gl.EdgeFlag
  - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
  - remove LuaMaterial {pre,post}list handling
